[build-system]
requires = [
  "cython==3.0.11",
  "numpy==1.22.2; python_version<'3.9'",
  "numpy>=2; python_version>='3.9'",
  "setuptools",
]

[project]
name = "encoders"
version = "0.0.4"
description = "Faster than scikit encoders"
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "ISC License" }
authors = [
  { name = "Dobatymo", email = "Dobatymo@users.noreply.github.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
optional-dependencies.bench = [
  "genutility[time]",
  "numpy",
  "pandas[output-formatting]",
  "scikit-learn",
  "tqdm",
]
optional-dependencies.test = [
  "numpy",
]
urls.Home = "https://github.com/Dobatymo/encoders"

[tool.setuptools]
packages = [ "encoders" ]

[tool.setuptools.package-data]
encoders = [ "py.typed" ]

[tool.cibuildwheel]
archs = [ "auto64" ]
test-extras = "test"
test-command = "python -OO -m unittest discover -v -s {project}/tests"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

lint.extend-select = [
  "B",
  "I",
]

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
allow_redefinition = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.bandit]
skips = [ "B101" ]

[tool.cython-lint]
max-line-length = 120
ignore = [ "W191" ]
